include_directories(ch1/include/)

find_package(fmt)

set(SOURCES src/example/hello_world.cpp)
set(SOURCES src/example/three-way-comparisons)
set(SOURCES src/example/get_function_name)
set(SOURCES src/example/attribute)
set(SOURCES src/example/optional)
set(SOURCES src/example/structured_bindings)
set(SOURCES src/example/initliazer_range_loop)
set(SOURCES src/example/designated_initializers)
set(SOURCES src/example/consteval)

add_executable(hello_world ${SOURCES})
add_executable(three-way-comparsions ${SOURCES})
add_executable(get_function_name ${SOURCES})
add_executable(attribute ${SOURCES})
add_executable(optional ${SOURCES})
add_executable(structured_bindings ${SOURCES})
add_executable(initliazer_range_loop ${SOURCES})
add_executable(designated_initializers ${SOURCES})
add_executable(consteval ${SOURCES})

target_link_libraries(get_function_name PRIVATE fmt::fmt)